# vector-quantization-by-ml

./: .coverage  .gitignore  .pre-commit-config.yaml  Changelog.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml  lint.yml  test.yml
docs/: README.md
examples/: __init__.py  autoencoder.py  autoencoder_fsq.py  autoencoder_lfq.py  data.py
tests/: conftest.py  test_finite_scalar_quantization.py  test_latent_quantization.py  test_lookup_free_quantization.py  test_readme.py  test_residual_vq.py  test_vector_quantize.py  test_vector_quantize_pytorch.py
vector_quantization/: __init__.py  codebooks.py  finite_scalar_quantization.py  latent_quantization.py  lookup_free_quantization.py  random_projection_quantizer.py  residual_fsq.py  residual_lfq.py  residual_vq.py  vector_quantize_pytorch.py
vector_quantization/utils/: distributed.py  general.py  kmeans.py  losses.py
vector_quantize_pytorch/: __init__.py  codebooks.py  finite_scalar_quantization.py  latent_quantization.py  lookup_free_quantization.py  random_projection_quantizer.py  residual_fsq.py  residual_lfq.py  residual_vq.py  utils.py  vector_quantize_pytorch.py
vector_quantize_pytorch/utils/: distributed.py  general.py  kmeans.py  losses.py
