[project]
name = "vector-quantize-pytorch"
version = "1.15.0"
description = "Fork of the Vector Quantization - Pytorch Project"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" },
    { name = "Baptiste Morisse", email = "bmorisse.pro@proton.me"}
]
maintainers = [
  { name = "Baptiste Morisse", email = "bmorisse.pro@proton.me"}
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'pytorch',
    'quantization'
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
  ]

dependencies = [
    "torch>=2.0",
    "einops>=0.8.0",
    "einx>=0.2.2",
]

[project.urls]
Homepage = "https://pypi.org/project/vector-quantize-pytorch/"
Repository = "https://github.com/lucidrains/vector-quantizer-pytorch"

[project.optional-dependencies]
examples = [
    "lightning",
    "torchvision",
    "tensorboard",
    "rich>=13.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.1",
    "ipython>=8.18.1",
    "marimo>=0.7.1",
    "wily>=1.25.0",
    "rope>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vector_quantize_pytorch"]
